Implement sending verification emails with Gmail SMPT server.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.packagesToScan = com.example.instructors.entity
 
-app.jwtSecret=TwojSekretnyKluczJWT
-app.jwtExpirationInMs=86400000
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=michal.grzeszuk.dodat@gmail.com
+spring.mail.password=xxx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
