Add gym pass entity. Implement scheduled tasks sending messages to user with information about gym passes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.packagesToScan = com.example.instructors.entity
+spring.sql.init.mode = always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -13,3 +14,6 @@ spring.mail.username=michal.grzeszuk.dodat@gmail.com
 spring.mail.password=xxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.data.web.pageable.default-page-size=20
+spring.data.web.pageable.max-page-size=100
