--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.data.web.pageable.default-page-size=20
 spring.data.web.pageable.max-page-size=100
+
+
+#testMessageForCICD
