--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,9 +26,16 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-m2
-
+            
+      - name: Build and test project with Maven
+        run: mvn -B test
+      
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
 
       - name: Run tests
         run: mvn test
+
+      - name: List files
+        run: ls -la
+  
