--- a/.github/workflows/MavenWorkflow.yml
+++ b/.github/workflows/MavenWorkflow.yml
@@ -28,4 +28,7 @@ jobs:
             ${{ runner.os }}-m2
             
       - name: Build project with Maven
-        run: mvn -B package --file pom.xml -Dtest=com.example.instructors.EntityTests -Dsurefire.failIfNoSpecifiedTests=false
+        run: mvn -B package --file pom.xml -Dskiptests
+
+      - name: Run tests from a specific package
+        run: mvn -B test -Dtest=com.example.instructors.EntityTests
