--- a/.github/workflows/MavenWorkflow.yml
+++ b/.github/workflows/MavenWorkflow.yml
@@ -24,5 +24,7 @@ jobs:
           ${{ runner.os }}-m2
     - name: Build
       run: mvn -B package --file pom.xml -DskipTests
-    - name: Test
+    - name: Run tests
       run: mvn test
+      env:
+        SPRING_PROFILES_ACTIVE: test
