ADd new lombok annotation - AdminOnly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.packagesToScan = com.example.instructors.entity
-#spring.sql.init.mode = always
+spring.sql.init.mode = always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
