--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,8 @@ spring.mail.password=xxx
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+template.html.path = C:/Users/mgrzeszuk/Documents/Instructors BE/src/main/resources/templates/pdf.html
+pdf.css.path=file:///C:/Users/mgrzeszuk/Documents/Instructors%20BE/src/main/resources/static/css/
+
 spring.data.web.pageable.default-page-size=20
 spring.data.web.pageable.max-page-size=100
