Implement oauth2 authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,16 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.data.web.pageable.default-page-size=20
 spring.data.web.pageable.max-page-size=100
+
+# GitHub Login
+spring.security.oauth2.client.registration.github.client-id=b2ec2cc838dd50adbabd
+spring.security.oauth2.client.registration.github.client-secret=80382425e665b05b271fea95a797601c4cdc5bab
+spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/{registrationId}
+
+spring.security.oauth2.client.provider.github.authorization-uri= https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+spring.security.oauth2.client.provider.github.user-name-attribute=id
+spring.security.oauth2.client.provider.github.jwk-set-uri=  ''
+
+logging.level.org.springframework.security=TRACE
