--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,12 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+
 spring.jpa.hibernate.packagesToScan = com.example.instructors.entity
-spring.sql.init.mode = always
+#spring.sql.init.mode = always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
