--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost:5434/instructorsDb
+spring.datasource.url=jdbc:postgresql://localhost:5432/instructorsDb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=
 
-spring.jpa.hibernate.packagesToScan = com.example.instructors.entity
-#spring.sql.init.mode = always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode = always
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
