--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,8 @@ services:
       POSTGRES_DB: instructorsDb
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
